source/styles/styles.css
/* Background and "number of complete pomodoros" colors */
body {
  /* Background color */
  background-color: #08222e;
  margin: 0;
  font-family: Nunito, sans-serif;

  /* Text color */
  color: #b7daeb;
}

/* "SOURCE" text */
a {
  color: #b7daeb;
  height: 1.5rem;
  width: 5rem;
  text-align: center;
  padding: 5px 0;
  margin: 0 auto;
  margin-top: 15px; 
}

/* Main page layout and colors */
#all {
  width: auto;
  margin: 0 auto;
  margin-top: 1em;
  border-radius: 25px;
}

/* Creates flexbox for most of layout */
#main {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

#circle {
  display: flex;
  justify-content: center;
}

/* Main timer */
#timer {
  display: flex;
  justify-content: center;
  font-size: 2.5em;
  color: #b7daeb;
  z-index: 1;
  position: absolute;
  margin-top: 100px;
  margin-left: 115px;
}

/* start/stop btn */
#mixBut {
  /* color is changed in the html file */
  background-color: #ff671d;
  color: white;
  width: 150px;
  height: 40px;
  font-family: Nunito, sans-serif;
  margin: 0 auto;
  float: left;
  padding: 0.25rem;
  border-radius: 25px;
  font-weight: bold;
  font-size: 1.5rem;
  border: none;
}

#mixBut:focus {
  outline: none;
}

#mixBut:active {
  outline: none;
}

#mixBut:hover {
  outline: none;
  background-color: #ff8d53;
}

/* reset btn */
#reset-btn {
  /* color is changed in the html file */
  margin: 0 auto;
  float: right;
  padding: 0.25rem;
  border-radius: 25px;
  font-weight: bold;
  font-size: 1.5rem;
  border: none;
  background-color: #bd0000;
  color: white;
  width: 150px;
  height: 40px;
  font-family: Nunito, sans-serif;
}

#reset-btn:focus,
#reset-btn:active {
  outline: none;
}

#reset-btn:hover {
  outline: none;
  background-color: #f71a1a;
}

/* Aligns text "num of complete pomos */
#completePomos {
  text-align: center;
}

/* Settings css format */
.modal {
  overflow: auto;
  scrollbar-width: none; /* Firefox */
  -ms-overflow-style: none; /* Internet Explorer 10+ */
  display: none; /* Hidden by default */
  position: fixed; /* Stay in place */
  z-index: 1; /* Sit on top */
  left: 0;
  top: 0;
  width: 100%; /* Full width */
  height: 100%; /* Full height */
  background-color: rgb(0, 0, 0); /* Fallback color */
  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
}

/* settings popup */
#modal-settings-content {
  /* background of settings */
  background-color: #b7daeb;

  /* Color of text */
  color: #08222e;
  text-align: center;
  border-radius: 15px;
  border: 1px solid #888;
  max-width: 28vw;
  min-width: 250px;
  display: flex;
  flex-direction: column;
  line-height: 1;
  margin: auto;
  margin-top: 4vh;
}

/* Lines up the "x" in the settings to the left */
.close {
  text-align: left;
  color: #08222e;
  float: left;
  font-weight: bold;
  font-size: calc(14px + 2vw);
  margin-left: 15px;
  margin-top: 10px;
}

/* Style for user input boxes */
input[type="number"] {
  border: 0;
  width: calc(10px + 1vw);
  margin-bottom: 2vh;
  padding: 1vh;
  border-radius: 8px;
  text-align: center;
}

/* Changes small text size in input boxes */
:placeholder-shown {
  font-size: 100%;
  font-family: "Nunito", sans-serif;
}

/* Gets rid of box around volume control */
fieldset {
  border: 0;
  height: 100px;
  width: 300px;
}

#settings-btn:focus {
  outline: none;
}

#stats-btn {
  margin-left: 300px;
}

#stats-btn:focus {
  outline: none;
}

.modal::-webkit-scrollbar {
  display: none; /* Safari and Chrome */
}

/* Changes font and size of alarm sounds */
#changeSelect {
  font-family: Nunito, sans-serif;
  width: 12vw;
  height: 30px;
  border-radius: 7px;
  outline: none;
  border: none;
}

.settingText {
  margin-top: 3vh;
  font-size: 23px;
  font-family: Nunito, sans-serif;
}

/* Keeps volume slider relative to window size */
#volume-slider {
  width: 10vw;
  float: left;
  margin-left: 30px;
  margin-top: 10px;
}

#volume-number {
  width: 50px;
  float: right;
}

/* Changes size of "Settings" at top of settings */
#modal-title {
  font-size: calc(12px + 2vw);
  font-weight: bold;
  text-align: center;
  vertical-align: top;
}

/* Slightly alters spacing in settings */
.modal-settings-customization {
  font-size: 1.5vw;
  width: 100%;
}

#minHead {
  justify-self: right;
  padding-left: 10px;
  margin-right: 40px;
  font-size: 1em;
}

#secHead {
  margin-left: 40px;
  padding-right: 10px;
  justify-self: left;
  font-size: medium;
}

/* Puts input minutes to the left in settings */
.minutes {
  float: right;
  margin-right: 50px;
}

/* Puts input seconds to the right in settings */
.seconds {
  float: left;
  margin-left: 50px;
}

/* Changes "x" to bold when mouse hovers over */
.close:hover,
.close:focus {
  color: white;
  text-decoration: none;
  cursor: pointer;
}

/* This the gray outline circle */
.e-c-base {
  fill: none;
  stroke: #B6B6B6;
  stroke-width: 10px
}

  /* This the red circle outline, disappear as timer counts down */ 
.e-c-progress {
  fill: none;
  stroke: #c7edff;
  stroke-width: 10px;
  transition: stroke-dashoffset 0.7s;
  stroke-linecap: round;
}

/* This the circle, moves as timer counts down */ 
.e-c-pointer {
  fill: none;
}

/* this determines the speed for red outline circle to disappear */ 
#e-pointer { transition: transform 0.7s; }
#len-grid {
  display: grid;
  grid-template-columns: auto auto;
}

#volume-text {
  font-size: medium;
}

#vol-grid {
  display: grid;
  grid-template-columns: auto auto;
}

#save-btn {
  background-color: #ff671d;
  border: none;
  color: white;
  border-radius: 20px;
  padding: 5px;
  width: 80px;
}

#save-btn:focus,
#save-btn:active {
  outline: none;
}

#save-btn:hover {
  background-color: #ff8d53;
}

